out of bound text area fixes

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -63,8 +63,8 @@ div#one {
 	width: 25%;
 	margin-left: -5px;
 	font-size: 50px;
-	padding-top: 46px;
-	padding-bottom: 46px;
+	padding-top: 48px;
+	padding-bottom: 48px;
 }
 
 div#two {
