--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -11,7 +11,6 @@ input[type=submit] {
     -webkit-border-radius: 5px;
     border-radius: 10px;
     font-weight: bold; 
-    maxlength: 8;
 }
 
 input[type=text] {
